[gd_scene load_steps=19 format=3 uid="uid://cswx8dua1y3vg"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_nioai"]
[ext_resource type="Texture2D" uid="uid://bs8l4ofh8vauv" path="res://Textures/Player/player_sprite.png" id="1_u673y"]
[ext_resource type="PackedScene" uid="uid://b86dn3foyd106" path="res://Utility/hurt_box.tscn" id="3_wuv3p"]
[ext_resource type="Texture2D" uid="uid://clr8tawnvbfbb" path="res://Textures/GUI/exp_background.png" id="4_igkmg"]
[ext_resource type="Texture2D" uid="uid://b1q7rfk0m1by7" path="res://Textures/GUI/exp_progress.png" id="5_pen7g"]
[ext_resource type="FontFile" uid="uid://cj2ydmptfj3q2" path="res://Font/Times New Roman - Bold Italic.ttf" id="6_0seu6"]
[ext_resource type="FontFile" uid="uid://dtyjkquqtfky1" path="res://Font/SHPinscher-Regular.otf" id="6_cik61"]
[ext_resource type="AudioStream" uid="uid://bfy7i5w6dd1jg" path="res://Audio/SoundEffect/levelup.ogg" id="7_y663t"]
[ext_resource type="Texture2D" uid="uid://it17jvqkehxd" path="res://Textures/GUI/healthbar.png" id="8_2x0rx"]
[ext_resource type="Texture2D" uid="uid://ct8kg8uqa067b" path="res://Textures/GUI/health.png" id="9_1l1d4"]
[ext_resource type="AudioStream" uid="uid://b2unqcx22ey34" path="res://Audio/SoundEffect/Victory.wav" id="10_k1iw7"]
[ext_resource type="AudioStream" uid="uid://bqgnwquoq2xys" path="res://Audio/SoundEffect/Lose.ogg" id="11_pkwgo"]
[ext_resource type="PackedScene" uid="uid://dat715o4offc8" path="res://Utility/basic_button.tscn" id="12_p6jru"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4myfh"]
radius = 9.0
height = 27.9187

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4g7kh"]
size = Vector2(16, 26)

[sub_resource type="CircleShape2D" id="CircleShape2D_776yj"]
radius = 385.395

[sub_resource type="CircleShape2D" id="CircleShape2D_83ip1"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0hjbp"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_nioai")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_u673y")
hframes = 2

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 1)
scale = Vector2(0.672625, 0.788003)
shape = SubResource("CapsuleShape2D_4myfh")

[node name="walkTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="HurtBox" parent="." instance=ExtResource("3_wuv3p")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(2, 1)
shape = SubResource("RectangleShape2D_4g7kh")

[node name="Attack" type="Node2D" parent="."]

[node name="IceSpearTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="IceSpearAttackTimer" type="Timer" parent="Attack/IceSpearTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="TornadoTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 3.0

[node name="TornadoAttackTimer" type="Timer" parent="Attack/TornadoTimer"]
unique_name_in_owner = true
wait_time = 0.2

[node name="javelinBase" type="Node2D" parent="Attack"]
unique_name_in_owner = true

[node name="EnemyDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_776yj")

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_83ip1")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_0hjbp")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer" groups=["gui"]]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="ExperienceBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 19.0
offset_top = 8.0
offset_right = 659.0
offset_bottom = 48.0
scale = Vector2(0.95, 0.95)
texture_over = ExtResource("4_igkmg")
texture_progress = ExtResource("5_pen7g")

[node name="lbl_level" type="Label" parent="GUILayer/GUI/ExperienceBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 531.0
offset_top = 11.0
offset_right = 631.0
offset_bottom = 67.0
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_0seu6")
theme_override_font_sizes/font_size = 50
text = "01"
horizontal_alignment = 2
vertical_alignment = 2

[node name="level" type="Label" parent="GUILayer/GUI/ExperienceBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 478.947
offset_top = -11.5789
offset_right = 578.947
offset_bottom = 44.4211
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_0seu6")
theme_override_font_sizes/font_size = 25
text = "LEVEL:"
horizontal_alignment = 2
vertical_alignment = 2

[node name="hp" type="Label" parent="GUILayer/GUI/ExperienceBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -28.4211
offset_top = 309.474
offset_right = 71.5789
offset_bottom = 365.474
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_0seu6")
theme_override_font_sizes/font_size = 50
text = "HP"
horizontal_alignment = 2
vertical_alignment = 2

[node name="HealthBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 92.0
offset_top = 329.0
offset_right = 124.0
offset_bottom = 337.0
scale = Vector2(2, 2)
texture_over = ExtResource("8_2x0rx")
texture_progress = ExtResource("9_1l1d4")

[node name="LevelUp" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
z_index = 2
layout_mode = 0
offset_left = 800.0
offset_top = 50.0
offset_right = 1000.0
offset_bottom = 300.0

[node name="lbl_LevelUp" type="Label" parent="GUILayer/GUI/LevelUp"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("6_0seu6")
theme_override_font_sizes/font_size = 25
text = "Level Up!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 190.0
offset_bottom = 100.0

[node name="snd_levelup" type="AudioStreamPlayer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
stream = ExtResource("7_y663t")

[node name="DeathPanel" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
z_index = 2
layout_mode = 1
anchors_preset = -1
offset_left = 220.0
offset_top = -207.0
offset_right = 420.0
offset_bottom = -67.0

[node name="lbl_Result" type="Label" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = -1.099
anchor_top = 1.444
anchor_right = -1.099
anchor_bottom = 1.444
offset_left = 219.8
offset_top = -188.492
offset_right = 419.8
offset_bottom = -132.492
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_0seu6")
theme_override_font_sizes/font_size = 45
text = "Result"
horizontal_alignment = 1
vertical_alignment = 1

[node name="snd_victory" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("10_k1iw7")

[node name="snd_lose" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("11_pkwgo")
pitch_scale = 0.68

[node name="btn_menu" parent="GUILayer/GUI/DeathPanel" instance=ExtResource("12_p6jru")]
layout_mode = 0
offset_left = 64.0
offset_top = 86.0
offset_right = 144.0
offset_bottom = 117.0
text = "Menu"

[node name="lblTimer" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 242.0
offset_top = 11.0
offset_right = 407.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_cik61")
theme_override_font_sizes/font_size = 70
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollectedWeapons" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 19.0
offset_top = 38.0
offset_right = 219.0
offset_bottom = 54.0
columns = 10

[node name="CollectedUpgrades" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 19.0
offset_top = 54.0
offset_right = 219.0
offset_bottom = 70.0
columns = 10

[node name="dmg_box" type="Control" parent="GUILayer/GUI"]
anchors_preset = 0
offset_left = 318.0
offset_top = 179.0
offset_right = 358.0
offset_bottom = 219.0

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/IceSpearTimer" to="." method="_on_ice_spear_timer_timeout"]
[connection signal="timeout" from="Attack/IceSpearTimer/IceSpearAttackTimer" to="." method="_on_ice_spear_attack_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer" to="." method="_on_tornado_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer/TornadoAttackTimer" to="." method="_on_tornado_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
[connection signal="click_end" from="GUILayer/GUI/DeathPanel/btn_menu" to="." method="_on_btn_menu_click_end"]

[editable path="HurtBox"]
